--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.ldap.urls=ldap.forumsys.com
-spring.ldap.base=dc=example,dc=com
-spring.ldap.username=uid=riemann,ou=mathematicians,dc=example,dc=com
+#spring.ldap.base=dc=example,dc=com
+spring.ldap.username=cn=read-only-admin,dc=example,dc=com
 spring.ldap.password=password
 
 
-trace=true
+#trace=true
